RESOLVED FIXED216294
REGRESSION (Async overflow scroll): Truncated scrollbars in facebook chat
https://bugs.webkit.org/show_bug.cgi?id=216294
Summary REGRESSION (Async overflow scroll): Truncated scrollbars in facebook chat
Simon Fraser (smfr)
Reported 2020-09-08 17:02:06 PDT
Content inside a non-stacking context overflow:scroll can overlap overlay scrollbars.
Attachments
Patch (50.97 KB, patch)
2020-09-08 17:31 PDT, Simon Fraser (smfr)
no flags
Patch (91.24 KB, patch)
2020-09-08 20:25 PDT, Simon Fraser (smfr)
koivisto: review+
Patch (91.46 KB, patch)
2020-09-09 12:58 PDT, Simon Fraser (smfr)
ews-feeder: commit-queue-
Patch (89.56 KB, patch)
2020-09-09 21:00 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-09-08 17:31:42 PDT
Simon Fraser (smfr)
Comment 2 2020-09-08 17:32:17 PDT
Simon Fraser (smfr)
Comment 3 2020-09-08 20:25:59 PDT
Simon Fraser (smfr)
Comment 4 2020-09-09 12:58:33 PDT
Simon Fraser (smfr)
Comment 5 2020-09-09 21:00:54 PDT
EWS
Comment 6 2020-09-10 08:22:10 PDT
Committed r266825: <https://trac.webkit.org/changeset/266825> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408409 [details].
Simon Fraser (smfr)
Comment 7 2020-09-10 12:24:22 PDT
Note You need to log in before you can comment on or make changes to this bug.