Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -1000,6 +1000,15 @@ bool RenderLayerBacking::updateConfiguration(const RenderLayer* compositingAnces
     if (layerConfigChanged)
         updateInternalHierarchy();
 
+    // RenderLayerCompositor::adjustOverflowScrollbarContainerLayers() may have reparented the overflowControlsContainer
+    // in an earlier update, so always put it back here. We don't yet know if it will get reparented again.
+    if (m_overflowControlsContainer && m_overflowControlsContainer->parent() != m_graphicsLayer.get()) {
+        m_graphicsLayer->addChild(*m_overflowControlsContainer);
+        // Ensure that we fix up the position of m_overflowControlsContainer.
+        m_owningLayer.setNeedsCompositingGeometryUpdate();
+    }
+
+    // FIXME: Overlow controls need to be above the flattening layer?
     if (auto* flatteningLayer = tileCacheFlatteningLayer()) {
         if (layerConfigChanged || flatteningLayer->parent() != m_graphicsLayer.get())
             m_graphicsLayer->addChild(*flatteningLayer);
@@ -1261,32 +1270,8 @@ void RenderLayerBacking::updateGeometry(const RenderLayer* compositedAncestor)
     ASSERT(compositedAncestor == m_owningLayer.ancestorCompositingLayer());
     LayoutRect parentGraphicsLayerRect = computeParentGraphicsLayerRect(compositedAncestor);
 
-    if (m_ancestorClippingStack) {
-        // All clipRects in the stack are computed relative to m_owningLayer, so convert them back to compositedAncestor.
-        auto offsetFromCompositedAncestor = toLayoutSize(m_owningLayer.convertToLayerCoords(compositedAncestor, { }, RenderLayer::AdjustForColumns));
-        LayoutRect lastClipLayerRect = parentGraphicsLayerRect;
-
-        for (auto& entry : m_ancestorClippingStack->stack()) {
-            auto clipRect = entry.clipData.clipRect;
-            LayoutSize clippingOffset = computeOffsetFromAncestorGraphicsLayer(compositedAncestor, clipRect.location() + offsetFromCompositedAncestor, deviceScaleFactor);
-            LayoutRect snappedClippingLayerRect = snappedGraphicsLayer(clippingOffset, clipRect.size(), deviceScaleFactor).m_snappedRect;
-
-            entry.clippingLayer->setPosition(toLayoutPoint(snappedClippingLayerRect.location() - lastClipLayerRect.location()));
-            lastClipLayerRect = snappedClippingLayerRect;
-
-            entry.clippingLayer->setSize(snappedClippingLayerRect.size());
-
-            if (entry.clipData.isOverflowScroll) {
-                ScrollOffset scrollOffset = entry.clipData.clippingLayer->scrollOffset();
-
-                entry.clippingLayer->setBoundsOrigin(scrollOffset);
-                lastClipLayerRect.moveBy(-scrollOffset);
-            } else
-                entry.clippingLayer->setBoundsOrigin({ });
-        }
-
-        parentGraphicsLayerRect = lastClipLayerRect;
-    }
+    if (m_ancestorClippingStack)
+        updateClippingStackLayerGeometry(*m_ancestorClippingStack, compositedAncestor, parentGraphicsLayerRect);
 
     LayoutRect primaryGraphicsLayerRect = computePrimaryGraphicsLayerRect(compositedAncestor, parentGraphicsLayerRect);
 
@@ -1471,6 +1456,30 @@ void RenderLayerBacking::updateGeometry(const RenderLayer* compositedAncestor)
         setContentsNeedDisplay();
 }
 
+void RenderLayerBacking::adjustOverflowControlsPositionRelativeToAncestor(const RenderLayer& ancestorLayer)
+{
+    ASSERT(m_overflowControlsContainer);
+    ASSERT(ancestorLayer.isComposited());
+    auto ancestorBacking = ancestorLayer.backing();
+    if (!ancestorBacking)
+        return;
+
+    LayoutRect parentGraphicsLayerRect = computeParentGraphicsLayerRect(&ancestorLayer);
+    LayoutRect primaryGraphicsLayerRect = computePrimaryGraphicsLayerRect(&ancestorLayer, parentGraphicsLayerRect);
+
+    auto overflowControlsRect = overflowControlsHostLayerRect(downcast<RenderBox>(renderer()));
+
+    if (overflowControlsHostLayerAncestorClippingStack())
+        updateClippingStackLayerGeometry(*m_overflowControlsHostLayerAncestorClippingStack, &ancestorLayer, parentGraphicsLayerRect);
+
+    ComputedOffsets rendererOffset(m_owningLayer, &ancestorLayer, { }, parentGraphicsLayerRect, primaryGraphicsLayerRect);
+
+    LayoutSize boxOffsetFromGraphicsLayer = toLayoutSize(overflowControlsRect.location()) + rendererOffset.fromParentGraphicsLayer();
+    SnappedRectInfo snappedBoxInfo = snappedGraphicsLayer(boxOffsetFromGraphicsLayer, overflowControlsRect.size(), deviceScaleFactor());
+
+    m_overflowControlsContainer->setPosition(snappedBoxInfo.m_snappedRect.location());
+}
+
 void RenderLayerBacking::setLocationOfScrolledContents(ScrollOffset scrollOffset, ScrollingLayerPositionAction setOrSync)
 {
     if (setOrSync == ScrollingLayerPositionAction::Sync)
@@ -1572,18 +1581,10 @@ void RenderLayerBacking::updateInternalHierarchy()
     // so it's not inserted here.
     GraphicsLayer* lastClippingLayer = nullptr;
     if (m_ancestorClippingStack) {
-        auto& clippingStack = m_ancestorClippingStack->stack();
-        for (unsigned i = 0; i < clippingStack.size() - 1; ++i) {
-            auto& entry = clippingStack.at(i);
-            Vector<Ref<GraphicsLayer>> children;
-            children.append(*clippingStack.at(i + 1).clippingLayer);
-            entry.clippingLayer->setChildren(WTFMove(children));
-        }
-        
-        lastClippingLayer = clippingStack.last().clippingLayer.get();
-        lastClippingLayer->removeAllChildren();
+        connectClippingStackLayers(*m_ancestorClippingStack);
+        lastClippingLayer = m_ancestorClippingStack->lastClippingLayer();
     }
-    
+
     if (m_contentsContainmentLayer) {
         m_contentsContainmentLayer->removeAllChildren();
         if (lastClippingLayer)
@@ -1619,6 +1620,7 @@ void RenderLayerBacking::updateInternalHierarchy()
         if (m_layerForScrollCorner)
             m_overflowControlsContainer->addChild(*m_layerForScrollCorner);
 
+        // m_overflowControlsContainer may get reparented later.
         m_graphicsLayer->addChild(*m_overflowControlsContainer);
     }
 }
@@ -1789,6 +1791,11 @@ bool RenderLayerBacking::updateAncestorClippingStack(Vector<CompositedClipData>&
     if (m_ancestorClippingStack && clippingData.isEmpty()) {
         m_ancestorClippingStack->clear(scrollingCoordinator);
         m_ancestorClippingStack = nullptr;
+        
+        if (m_overflowControlsHostLayerAncestorClippingStack) {
+            m_overflowControlsHostLayerAncestorClippingStack->clear(scrollingCoordinator);
+            m_overflowControlsHostLayerAncestorClippingStack = nullptr;
+        }
         return true;
     }
     
@@ -1805,7 +1812,86 @@ bool RenderLayerBacking::updateAncestorClippingStack(Vector<CompositedClipData>&
     
     m_ancestorClippingStack->updateWithClipData(scrollingCoordinator, WTFMove(clippingData));
     LOG_WITH_STREAM(Compositing, stream << "layer " << &m_owningLayer << " ancestorClippingStack " << *m_ancestorClippingStack);
+    if (m_overflowControlsHostLayerAncestorClippingStack)
+        m_overflowControlsHostLayerAncestorClippingStack->updateWithClipData(scrollingCoordinator, WTFMove(clippingData));
     return true;
+}
+
+void RenderLayerBacking::ensureOverflowControlsHostLayerAncestorClippingStack(const RenderLayer* compositedAncestor)
+{
+    auto* scrollingCoordinator = m_owningLayer.page().scrollingCoordinator();
+    auto clippingData = m_ancestorClippingStack->compositedClipData();
+
+    if (m_overflowControlsHostLayerAncestorClippingStack)
+        m_overflowControlsHostLayerAncestorClippingStack->updateWithClipData(scrollingCoordinator, WTFMove(clippingData));
+    else
+        m_overflowControlsHostLayerAncestorClippingStack = makeUnique<LayerAncestorClippingStack>(WTFMove(clippingData));
+
+    ensureClippingStackLayers(*m_overflowControlsHostLayerAncestorClippingStack);
+
+    LayoutRect parentGraphicsLayerRect = computeParentGraphicsLayerRect(compositedAncestor);
+    updateClippingStackLayerGeometry(*m_overflowControlsHostLayerAncestorClippingStack, compositedAncestor, parentGraphicsLayerRect);
+
+    connectClippingStackLayers(*m_overflowControlsHostLayerAncestorClippingStack);
+}
+
+void RenderLayerBacking::ensureClippingStackLayers(LayerAncestorClippingStack& clippingStack)
+{
+    for (auto& entry : clippingStack.stack()) {
+        if (!entry.clippingLayer) {
+            entry.clippingLayer = createGraphicsLayer(entry.clipData.isOverflowScroll ? "clip for scroller" : "ancestor clipping");
+            entry.clippingLayer->setMasksToBounds(true);
+            entry.clippingLayer->setPaintingPhase({ });
+        }
+    }
+}
+
+void RenderLayerBacking::removeClippingStackLayers(LayerAncestorClippingStack& clippingStack)
+{
+    for (auto& entry : clippingStack.stack())
+        GraphicsLayer::unparentAndClear(entry.clippingLayer);
+}
+
+void RenderLayerBacking::connectClippingStackLayers(LayerAncestorClippingStack& clippingStack)
+{
+    auto& clippingEntryStack = clippingStack.stack();
+    for (unsigned i = 0; i < clippingEntryStack.size() - 1; ++i) {
+        auto& entry = clippingEntryStack.at(i);
+        Vector<Ref<GraphicsLayer>> children;
+        children.append(*clippingEntryStack.at(i + 1).clippingLayer);
+        entry.clippingLayer->setChildren(WTFMove(children));
+    }
+
+    clippingEntryStack.last().clippingLayer->removeAllChildren();
+}
+
+void RenderLayerBacking::updateClippingStackLayerGeometry(LayerAncestorClippingStack& clippingStack, const RenderLayer* compositedAncestor, LayoutRect& parentGraphicsLayerRect)
+{
+    // All clipRects in the stack are computed relative to m_owningLayer, so convert them back to compositedAncestor.
+    auto offsetFromCompositedAncestor = toLayoutSize(m_owningLayer.convertToLayerCoords(compositedAncestor, { }, RenderLayer::AdjustForColumns));
+    LayoutRect lastClipLayerRect = parentGraphicsLayerRect;
+
+    auto deviceScaleFactor = this->deviceScaleFactor();
+    for (auto& entry : clippingStack.stack()) {
+        auto clipRect = entry.clipData.clipRect;
+        LayoutSize clippingOffset = computeOffsetFromAncestorGraphicsLayer(compositedAncestor, clipRect.location() + offsetFromCompositedAncestor, deviceScaleFactor);
+        LayoutRect snappedClippingLayerRect = snappedGraphicsLayer(clippingOffset, clipRect.size(), deviceScaleFactor).m_snappedRect;
+
+        entry.clippingLayer->setPosition(toLayoutPoint(snappedClippingLayerRect.location() - lastClipLayerRect.location()));
+        lastClipLayerRect = snappedClippingLayerRect;
+
+        entry.clippingLayer->setSize(snappedClippingLayerRect.size());
+
+        if (entry.clipData.isOverflowScroll) {
+            ScrollOffset scrollOffset = entry.clipData.clippingLayer->scrollOffset();
+
+            entry.clippingLayer->setBoundsOrigin(scrollOffset);
+            lastClipLayerRect.moveBy(-scrollOffset);
+        } else
+            entry.clippingLayer->setBoundsOrigin({ });
+    }
+
+    parentGraphicsLayerRect = lastClipLayerRect;
 }
 
 // Return true if the layer changed.
@@ -1815,22 +1901,13 @@ bool RenderLayerBacking::updateAncestorClipping(bool needsAncestorClip, const Re
 
     if (needsAncestorClip) {
         if (compositor().updateAncestorClippingStack(m_owningLayer, compositingAncestor)) {
-            // Make any layers we don't have.
-            if (m_ancestorClippingStack) {
-                for (auto& entry : m_ancestorClippingStack->stack()) {
-                    if (!entry.clippingLayer) {
-                        entry.clippingLayer = createGraphicsLayer(entry.clipData.isOverflowScroll ? "clip for scroller" : "ancestor clipping");
-                        entry.clippingLayer->setMasksToBounds(true);
-                        entry.clippingLayer->setPaintingPhase({ });
-                    }
-                }
-            }
+            if (m_ancestorClippingStack)
+                ensureClippingStackLayers(*m_ancestorClippingStack);
 
             layersChanged = true;
         }
     } else if (m_ancestorClippingStack) {
-        for (auto& entry : m_ancestorClippingStack->stack())
-            GraphicsLayer::unparentAndClear(entry.clippingLayer);
+        removeClippingStackLayers(*m_ancestorClippingStack);
 
         m_ancestorClippingStack = nullptr;
         layersChanged = true;
@@ -2852,6 +2929,17 @@ GraphicsLayer* RenderLayerBacking::childForSuperlayers() const
         return m_contentsContainmentLayer.get();
     
     return m_graphicsLayer.get();
+}
+
+LayoutSize RenderLayerBacking::offsetRelativeToRendererOriginForDescendantLayers() const
+{
+    if (m_scrolledContentsLayer)
+        return toLayoutSize(scrollContainerLayerBox(downcast<RenderBox>(renderer())).location());
+
+    if (hasClippingLayer())
+        return toLayoutSize(clippingLayerBox(downcast<RenderBox>(renderer())).location());
+
+    return { };
 }
 
 bool RenderLayerBacking::paintsIntoWindow() const
