Source/WebCore/rendering/RenderLayerBacking.h
@@ -114,6 +114,9 @@ public:
     LayerAncestorClippingStack* ancestorClippingStack() const { return m_ancestorClippingStack.get(); }
     bool updateAncestorClippingStack(Vector<CompositedClipData>&&);
 
+    void ensureOverflowControlsHostLayerAncestorClippingStack(const RenderLayer* compositedAncestor);
+    LayerAncestorClippingStack* overflowControlsHostLayerAncestorClippingStack() const { return m_overflowControlsHostLayerAncestorClippingStack.get(); }
+
     GraphicsLayer* contentsContainmentLayer() const { return m_contentsContainmentLayer.get(); }
 
     GraphicsLayer* foregroundLayer() const { return m_foregroundLayer.get(); }
@@ -270,6 +273,8 @@ public:
     GraphicsLayer* layerForScrollCorner() const { return m_layerForScrollCorner.get(); }
     GraphicsLayer* overflowControlsContainer() const { return m_overflowControlsContainer.get(); }
 
+    void adjustOverflowControlsPositionRelativeToAncestor(const RenderLayer&);
+
     bool canCompositeFilters() const { return m_canCompositeFilters; }
 #if ENABLE(FILTERS_LEVEL_2)
     bool canCompositeBackdropFilters() const { return m_canCompositeBackdropFilters; }
@@ -330,6 +335,15 @@ private:
     LayoutSize contentOffsetInCompositingLayer() const;
     // Result is transform origin in device pixels.
     FloatPoint3D computeTransformOriginForPainting(const LayoutRect& borderBox) const;
+
+    LayoutSize offsetRelativeToRendererOriginForDescendantLayers() const;
+    
+    void ensureClippingStackLayers(LayerAncestorClippingStack&);
+    void removeClippingStackLayers(LayerAncestorClippingStack&);
+
+    void updateClippingStackLayerGeometry(LayerAncestorClippingStack&, const RenderLayer* compositedAncestor, LayoutRect& parentGraphicsLayerRect);
+
+    void connectClippingStackLayers(LayerAncestorClippingStack&);
 
     void updateOpacity(const RenderStyle&);
     void updateTransform(const RenderStyle&);
@@ -399,6 +413,7 @@ private:
     Vector<WeakPtr<RenderLayer>> m_backingSharingLayers;
 
     std::unique_ptr<LayerAncestorClippingStack> m_ancestorClippingStack; // Only used if we are clipped by an ancestor which is not a stacking context.
+    std::unique_ptr<LayerAncestorClippingStack> m_overflowControlsHostLayerAncestorClippingStack; // Used when we have an overflow controls host layer which was reparented, and needs clipping by ancestors.
 
     RefPtr<GraphicsLayer> m_contentsContainmentLayer; // Only used if we have a background layer; takes the transform.
     RefPtr<GraphicsLayer> m_graphicsLayer;
